Fix items align in conference component, fix problem with jeet (return to 6.1.2 version)  Changes to be committed: 	modified:   client/src/stylus/assets/components/chatComponent.styl 	modified:   client/src/stylus/prefences/config.styl

--- a/client/src/stylus/assets/components/chatComponent.styl
+++ b/client/src/stylus/assets/components/chatComponent.styl
@@ -19,7 +19,7 @@
         display flex
         flex-wrap wrap
         justify-content space-around
-        align-items flex-start
+        align-items center
         padding 0.25em
 
         .info_block
